--- a/apps/bgd/base/kustomization.yaml
+++ b/apps/bgd/base/kustomization.yaml
@@ -1,5 +1,5 @@
-namespace: bgd
+namespace: developer-dan
 resources:
-- bgd-svc.yaml
-- bgd-deployment.yaml
-- bgd-route.yaml
+  - bgd-svc.yaml
+  - bgd-deployment.yaml
+  - bgd-route.yaml
